// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMetrics and getSeries should return metrics with derivative metric 1`] = `
Object {
  "cluster_search_request_rate": Array [
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          3.361666666666667,
        ],
        Array [
          1498968600000,
          3.3066666666666666,
        ],
        Array [
          1498969200000,
          4.395,
        ],
        Array [
          1498969800000,
          4.465,
        ],
        Array [
          1498970400000,
          4.3933333333333335,
        ],
        Array [
          1498971000000,
          4.465,
        ],
        Array [
          1498971600000,
          4.465,
        ],
        Array [
          1498972200000,
          4.395,
        ],
        Array [
          1498972800000,
          4.465,
        ],
        Array [
          1498973400000,
          4.395,
        ],
        Array [
          1498974000000,
          4.466666666666667,
        ],
        Array [
          1498974600000,
          4.395,
        ],
        Array [
          1498975200000,
          4.466666666666667,
        ],
        Array [
          1498975800000,
          4.395,
        ],
        Array [
          1498976400000,
          4.465,
        ],
        Array [
          1498977000000,
          4.466666666666667,
        ],
        Array [
          1498977600000,
          4.395,
        ],
        Array [
          1498978200000,
          4.466666666666667,
        ],
        Array [
          1498978800000,
          4.395,
        ],
        Array [
          1498979400000,
          4.458333333333333,
        ],
        Array [
          1498980000000,
          4.3966666666666665,
        ],
        Array [
          1498980600000,
          4.465,
        ],
        Array [
          1498981200000,
          4.3966666666666665,
        ],
        Array [
          1498981800000,
          4.465,
        ],
        Array [
          1498982400000,
          4.3966666666666665,
        ],
        Array [
          1498983000000,
          4.465,
        ],
        Array [
          1498983600000,
          4.465,
        ],
        Array [
          1498984200000,
          4.395,
        ],
        Array [
          1498984800000,
          4.465,
        ],
        Array [
          1498985400000,
          4.38,
        ],
        Array [
          1498986000000,
          4.466666666666667,
        ],
        Array [
          1498986600000,
          4.395,
        ],
        Array [
          1498987200000,
          4.465,
        ],
        Array [
          1498987800000,
          4.463333333333333,
        ],
        Array [
          1498988400000,
          4.395,
        ],
        Array [
          1498989000000,
          4.465,
        ],
        Array [
          1498989600000,
          4.3933333333333335,
        ],
        Array [
          1498990200000,
          4.463333333333333,
        ],
        Array [
          1498990800000,
          4.395,
        ],
        Array [
          1498991400000,
          4.463333333333333,
        ],
        Array [
          1498992000000,
          4.395,
        ],
        Array [
          1498992600000,
          4.465,
        ],
        Array [
          1498993200000,
          4.466666666666667,
        ],
        Array [
          1498993800000,
          4.395,
        ],
        Array [
          1498994400000,
          4.466666666666667,
        ],
        Array [
          1498995000000,
          4.395,
        ],
        Array [
          1498995600000,
          4.465,
        ],
        Array [
          1498996200000,
          4.3966666666666665,
        ],
        Array [
          1498996800000,
          4.465,
        ],
        Array [
          1498997400000,
          4.3966666666666665,
        ],
        Array [
          1498998000000,
          4.465,
        ],
        Array [
          1498998600000,
          4.465,
        ],
        Array [
          1498999200000,
          4.3966666666666665,
        ],
        Array [
          1498999800000,
          4.465,
        ],
        Array [
          1499000400000,
          4.3966666666666665,
        ],
        Array [
          1499001000000,
          4.456666666666667,
        ],
        Array [
          1499001600000,
          4.3966666666666665,
        ],
        Array [
          1499002200000,
          4.465,
        ],
        Array [
          1499002800000,
          4.3933333333333335,
        ],
        Array [
          1499003400000,
          4.466666666666667,
        ],
        Array [
          1499004000000,
          4.456666666666667,
        ],
        Array [
          1499004600000,
          4.31,
        ],
        Array [
          1499005200000,
          4.465,
        ],
        Array [
          1499005800000,
          4.395,
        ],
        Array [
          1499006400000,
          4.465,
        ],
        Array [
          1499007000000,
          4.3933333333333335,
        ],
        Array [
          1499007600000,
          4.465,
        ],
        Array [
          1499008200000,
          4.465,
        ],
        Array [
          1499008800000,
          4.395,
        ],
        Array [
          1499009400000,
          4.463333333333333,
        ],
        Array [
          1499010000000,
          4.3933333333333335,
        ],
        Array [
          1499010600000,
          4.463333333333333,
        ],
        Array [
          1499011200000,
          4.386666666666667,
        ],
        Array [
          1499011800000,
          4.463333333333333,
        ],
        Array [
          1499012400000,
          4.466666666666667,
        ],
        Array [
          1499013000000,
          4.555,
        ],
        Array [
          1499013600000,
          4.75,
        ],
        Array [
          1499014200000,
          4.241666666666666,
        ],
        Array [
          1499014800000,
          0.21666666666666667,
        ],
        Array [
          1499015400000,
          2.191666666666667,
        ],
        Array [
          1499016000000,
          1.4416666666666667,
        ],
        Array [
          1499016600000,
          4.51,
        ],
        Array [
          1499017200000,
          1.66,
        ],
        Array [
          1499017800000,
          0.21666666666666667,
        ],
        Array [
          1499018400000,
          0.21666666666666667,
        ],
        Array [
          1499019000000,
          1.2116666666666667,
        ],
        Array [
          1499019600000,
          1.83,
        ],
        Array [
          1499020200000,
          1.89,
        ],
        Array [
          1499020800000,
          0.05,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Number of search requests being executed across primary and replica shards. A single search can run against multiple shards!",
        "field": "indices_stats._all.total.search.query_total",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": true,
        "label": "Total Shards",
        "metricAgg": "max",
        "title": "Search Rate",
        "units": "/s",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
  ],
}
`;

exports[`getMetrics and getSeries should return metrics with metric containing custom aggs 1`] = `
Object {
  "cluster_index_latency": Array [
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          null,
        ],
        Array [
          1498968600000,
          0.7906892818477084,
        ],
        Array [
          1498969200000,
          1.11985559566787,
        ],
        Array [
          1498969800000,
          1.2985559566787004,
        ],
        Array [
          1498970400000,
          0.9187725631768953,
        ],
        Array [
          1498971000000,
          1.2010830324909747,
        ],
        Array [
          1498971600000,
          1.6263537906137184,
        ],
        Array [
          1498972200000,
          1.636101083032491,
        ],
        Array [
          1498972800000,
          1.2848375451263538,
        ],
        Array [
          1498973400000,
          0.2483754512635379,
        ],
        Array [
          1498974000000,
          0.2523465703971119,
        ],
        Array [
          1498974600000,
          0.259927797833935,
        ],
        Array [
          1498975200000,
          0.29133574007220214,
        ],
        Array [
          1498975800000,
          0.3003610108303249,
        ],
        Array [
          1498976400000,
          0.28772563176895305,
        ],
        Array [
          1498977000000,
          0.30108303249097473,
        ],
        Array [
          1498977600000,
          0.31083032490974727,
        ],
        Array [
          1498978200000,
          0.37184115523465705,
        ],
        Array [
          1498978800000,
          0.3137184115523466,
        ],
        Array [
          1498979400000,
          0.29537237888647866,
        ],
        Array [
          1498980000000,
          0.2808664259927798,
        ],
        Array [
          1498980600000,
          0.29025270758122745,
        ],
        Array [
          1498981200000,
          0.2909747292418773,
        ],
        Array [
          1498981800000,
          0.32057761732851986,
        ],
        Array [
          1498982400000,
          0.28772563176895305,
        ],
        Array [
          1498983000000,
          0.3036101083032491,
        ],
        Array [
          1498983600000,
          0.4628158844765343,
        ],
        Array [
          1498984200000,
          0.5353790613718411,
        ],
        Array [
          1498984800000,
          1.547653429602888,
        ],
        Array [
          1498985400000,
          1.0938065918145599,
        ],
        Array [
          1498986000000,
          1.107942238267148,
        ],
        Array [
          1498986600000,
          1.5018050541516246,
        ],
        Array [
          1498987200000,
          1.63971119133574,
        ],
        Array [
          1498987800000,
          1.9411552346570398,
        ],
        Array [
          1498988400000,
          1.6931407942238268,
        ],
        Array [
          1498989000000,
          2.0653429602888087,
        ],
        Array [
          1498989600000,
          1.2216606498194946,
        ],
        Array [
          1498990200000,
          1.5653429602888087,
        ],
        Array [
          1498990800000,
          0.7516245487364621,
        ],
        Array [
          1498991400000,
          1.5512635379061372,
        ],
        Array [
          1498992000000,
          2.5696750902527077,
        ],
        Array [
          1498992600000,
          0.43790613718411553,
        ],
        Array [
          1498993200000,
          0.30324909747292417,
        ],
        Array [
          1498993800000,
          0.29169675090252706,
        ],
        Array [
          1498994400000,
          0.3021660649819495,
        ],
        Array [
          1498995000000,
          0.28447653429602887,
        ],
        Array [
          1498995600000,
          0.29025270758122745,
        ],
        Array [
          1498996200000,
          0.3003610108303249,
        ],
        Array [
          1498996800000,
          0.3151624548736462,
        ],
        Array [
          1498997400000,
          0.3111913357400722,
        ],
        Array [
          1498998000000,
          0.3072202166064982,
        ],
        Array [
          1498998600000,
          0.29566787003610107,
        ],
        Array [
          1498999200000,
          0.34729241877256317,
        ],
        Array [
          1498999800000,
          0.2931407942238267,
        ],
        Array [
          1499000400000,
          0.29494584837545124,
        ],
        Array [
          1499001000000,
          1.0809833694866233,
        ],
        Array [
          1499001600000,
          1.3285198555956679,
        ],
        Array [
          1499002200000,
          0.6436823104693141,
        ],
        Array [
          1499002800000,
          1.3768953068592058,
        ],
        Array [
          1499003400000,
          1.5833935018050542,
        ],
        Array [
          1499004000000,
          1.6331767256956993,
        ],
        Array [
          1499004600000,
          1.431985294117647,
        ],
        Array [
          1499005200000,
          1.0776173285198556,
        ],
        Array [
          1499005800000,
          1.344043321299639,
        ],
        Array [
          1499006400000,
          0.9895306859205776,
        ],
        Array [
          1499007000000,
          1.1375451263537906,
        ],
        Array [
          1499007600000,
          0.5252707581227437,
        ],
        Array [
          1499008200000,
          0.8888086642599278,
        ],
        Array [
          1499008800000,
          2.4891696750902526,
        ],
        Array [
          1499009400000,
          2.118772563176895,
        ],
        Array [
          1499010000000,
          1.5584837545126353,
        ],
        Array [
          1499010600000,
          2.123104693140794,
        ],
        Array [
          1499011200000,
          2.39117859725235,
        ],
        Array [
          1499011800000,
          1.8050541516245486,
        ],
        Array [
          1499012400000,
          0.26101083032490974,
        ],
        Array [
          1499013000000,
          0.24657039711191336,
        ],
        Array [
          1499013600000,
          0.259927797833935,
        ],
        Array [
          1499014200000,
          0.2796242774566474,
        ],
        Array [
          1499014800000,
          0.24206642066420664,
        ],
        Array [
          1499015400000,
          0.2779390420899855,
        ],
        Array [
          1499016000000,
          0.250733137829912,
        ],
        Array [
          1499016600000,
          0.2695086705202312,
        ],
        Array [
          1499017200000,
          0.24596774193548387,
        ],
        Array [
          1499017800000,
          0.22988929889298892,
        ],
        Array [
          1499018400000,
          0.2520295202952029,
        ],
        Array [
          1499019000000,
          0.2725274725274725,
        ],
        Array [
          1499019600000,
          0.6691095639428362,
        ],
        Array [
          1499020200000,
          0.7824620573355818,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Average latency for indexing documents, which is time it takes to index documents divided by number that were indexed. This only considers primary shards.",
        "field": "indices_stats._all.primaries.indexing.index_total",
        "format": "0,0.[00]",
        "hasCalculation": true,
        "isDerivative": false,
        "label": "Indexing Latency",
        "metricAgg": "sum",
        "units": "ms",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
  ],
}
`;

exports[`getMetrics and getSeries should return metrics with metric that uses default calculation 1`] = `
Object {
  "kibana_max_response_times": Array [
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          2.1666666666667,
        ],
        Array [
          1498968600000,
          2.3166666666667,
        ],
        Array [
          1498969200000,
          2.3666666666667,
        ],
        Array [
          1498969800000,
          2.5,
        ],
        Array [
          1498970400000,
          2.6166666666667,
        ],
        Array [
          1498971000000,
          2.85,
        ],
        Array [
          1498971600000,
          2.8666666666667,
        ],
        Array [
          1498972200000,
          3.0833333333333,
        ],
        Array [
          1498972800000,
          1.6666666666667,
        ],
        Array [
          1498973400000,
          0.11666666666667,
        ],
        Array [
          1498974000000,
          0.13333333333333,
        ],
        Array [
          1498974600000,
          0.43333333333333,
        ],
        Array [
          1498975200000,
          1.15,
        ],
        Array [
          1498975800000,
          1.1333333333333,
        ],
        Array [
          1498976400000,
          1.15,
        ],
        Array [
          1498977000000,
          1.05,
        ],
        Array [
          1498977600000,
          1.1833333333333,
        ],
        Array [
          1498978200000,
          0.91666666666667,
        ],
        Array [
          1498978800000,
          0.95,
        ],
        Array [
          1498979400000,
          1.0166666666667,
        ],
        Array [
          1498980000000,
          1.0333333333333,
        ],
        Array [
          1498980600000,
          1.05,
        ],
        Array [
          1498981200000,
          1.0333333333333,
        ],
        Array [
          1498981800000,
          1.0833333333333,
        ],
        Array [
          1498982400000,
          1,
        ],
        Array [
          1498983000000,
          1.1333333333333,
        ],
        Array [
          1498983600000,
          1.3666666666667,
        ],
        Array [
          1498984200000,
          1.9833333333333,
        ],
        Array [
          1498984800000,
          2,
        ],
        Array [
          1498985400000,
          2.1833333333333,
        ],
        Array [
          1498986000000,
          2.2,
        ],
        Array [
          1498986600000,
          2.3666666666667,
        ],
        Array [
          1498987200000,
          2.4166666666667,
        ],
        Array [
          1498987800000,
          2.55,
        ],
        Array [
          1498988400000,
          2.7,
        ],
        Array [
          1498989000000,
          2.8166666666667,
        ],
        Array [
          1498989600000,
          2.9333333333333,
        ],
        Array [
          1498990200000,
          3.0833333333333,
        ],
        Array [
          1498990800000,
          3.1166666666667,
        ],
        Array [
          1498991400000,
          3.3833333333333,
        ],
        Array [
          1498992000000,
          3.4666666666667,
        ],
        Array [
          1498992600000,
          1.0666666666667,
        ],
        Array [
          1498993200000,
          1,
        ],
        Array [
          1498993800000,
          1.0833333333333,
        ],
        Array [
          1498994400000,
          1.1,
        ],
        Array [
          1498995000000,
          1.05,
        ],
        Array [
          1498995600000,
          1.0333333333333,
        ],
        Array [
          1498996200000,
          1.1166666666667,
        ],
        Array [
          1498996800000,
          1.0333333333333,
        ],
        Array [
          1498997400000,
          1.0833333333333,
        ],
        Array [
          1498998000000,
          1.0666666666667,
        ],
        Array [
          1498998600000,
          1.0166666666667,
        ],
        Array [
          1498999200000,
          1,
        ],
        Array [
          1498999800000,
          1.05,
        ],
        Array [
          1499000400000,
          1.0333333333333,
        ],
        Array [
          1499001000000,
          1.8166666666667,
        ],
        Array [
          1499001600000,
          2.0166666666667,
        ],
        Array [
          1499002200000,
          2.0833333333333,
        ],
        Array [
          1499002800000,
          2.2,
        ],
        Array [
          1499003400000,
          2.3,
        ],
        Array [
          1499004000000,
          2.3666666666667,
        ],
        Array [
          1499004600000,
          2.5593220338983,
        ],
        Array [
          1499005200000,
          2.7166666666667,
        ],
        Array [
          1499005800000,
          2.8833333333333,
        ],
        Array [
          1499006400000,
          3,
        ],
        Array [
          1499007000000,
          3.0833333333333,
        ],
        Array [
          1499007600000,
          3.25,
        ],
        Array [
          1499008200000,
          3.3,
        ],
        Array [
          1499008800000,
          3.5333333333333,
        ],
        Array [
          1499009400000,
          3.7166666666667,
        ],
        Array [
          1499010000000,
          3.7333333333333,
        ],
        Array [
          1499010600000,
          3.9833333333333,
        ],
        Array [
          1499011200000,
          4.1666666666667,
        ],
        Array [
          1499011800000,
          2.7166666666667,
        ],
        Array [
          1499012400000,
          1.0333333333333,
        ],
        Array [
          1499013000000,
          1.1,
        ],
        Array [
          1499013600000,
          1.2166666666667,
        ],
        Array [
          1499014200000,
          1.2,
        ],
        Array [
          1499014800000,
          0.98333333333333,
        ],
        Array [
          1499015400000,
          1.25,
        ],
        Array [
          1499016000000,
          1,
        ],
        Array [
          1499016600000,
          1.2666666666667,
        ],
        Array [
          1499017200000,
          1.0833333333333,
        ],
        Array [
          1499017800000,
          1.05,
        ],
        Array [
          1499018400000,
          0.93333333333333,
        ],
        Array [
          1499019000000,
          1.05,
        ],
        Array [
          1499019600000,
          1.5,
        ],
      ],
      "metric": Object {
        "app": "kibana",
        "description": "Maximum response time for client requests to the Kibana instance.",
        "field": "kibana_stats.response_times.max",
        "format": "0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Max",
        "metricAgg": "max",
        "title": "Client Response Time",
        "units": "ms",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
  ],
}
`;

exports[`getMetrics and getSeries should return metrics with non-derivative metric 1`] = `
Object {
  "node_cpu_utilization": Array [
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          2.1666666666667,
        ],
        Array [
          1498968600000,
          2.3166666666667,
        ],
        Array [
          1498969200000,
          2.3666666666667,
        ],
        Array [
          1498969800000,
          2.5,
        ],
        Array [
          1498970400000,
          2.6166666666667,
        ],
        Array [
          1498971000000,
          2.85,
        ],
        Array [
          1498971600000,
          2.8666666666667,
        ],
        Array [
          1498972200000,
          3.0833333333333,
        ],
        Array [
          1498972800000,
          1.6666666666667,
        ],
        Array [
          1498973400000,
          0.11666666666667,
        ],
        Array [
          1498974000000,
          0.13333333333333,
        ],
        Array [
          1498974600000,
          0.43333333333333,
        ],
        Array [
          1498975200000,
          1.15,
        ],
        Array [
          1498975800000,
          1.1333333333333,
        ],
        Array [
          1498976400000,
          1.15,
        ],
        Array [
          1498977000000,
          1.05,
        ],
        Array [
          1498977600000,
          1.1833333333333,
        ],
        Array [
          1498978200000,
          0.91666666666667,
        ],
        Array [
          1498978800000,
          0.95,
        ],
        Array [
          1498979400000,
          1.0166666666667,
        ],
        Array [
          1498980000000,
          1.0333333333333,
        ],
        Array [
          1498980600000,
          1.05,
        ],
        Array [
          1498981200000,
          1.0333333333333,
        ],
        Array [
          1498981800000,
          1.0833333333333,
        ],
        Array [
          1498982400000,
          1,
        ],
        Array [
          1498983000000,
          1.1333333333333,
        ],
        Array [
          1498983600000,
          1.3666666666667,
        ],
        Array [
          1498984200000,
          1.9833333333333,
        ],
        Array [
          1498984800000,
          2,
        ],
        Array [
          1498985400000,
          2.1833333333333,
        ],
        Array [
          1498986000000,
          2.2,
        ],
        Array [
          1498986600000,
          2.3666666666667,
        ],
        Array [
          1498987200000,
          2.4166666666667,
        ],
        Array [
          1498987800000,
          2.55,
        ],
        Array [
          1498988400000,
          2.7,
        ],
        Array [
          1498989000000,
          2.8166666666667,
        ],
        Array [
          1498989600000,
          2.9333333333333,
        ],
        Array [
          1498990200000,
          3.0833333333333,
        ],
        Array [
          1498990800000,
          3.1166666666667,
        ],
        Array [
          1498991400000,
          3.3833333333333,
        ],
        Array [
          1498992000000,
          3.4666666666667,
        ],
        Array [
          1498992600000,
          1.0666666666667,
        ],
        Array [
          1498993200000,
          1,
        ],
        Array [
          1498993800000,
          1.0833333333333,
        ],
        Array [
          1498994400000,
          1.1,
        ],
        Array [
          1498995000000,
          1.05,
        ],
        Array [
          1498995600000,
          1.0333333333333,
        ],
        Array [
          1498996200000,
          1.1166666666667,
        ],
        Array [
          1498996800000,
          1.0333333333333,
        ],
        Array [
          1498997400000,
          1.0833333333333,
        ],
        Array [
          1498998000000,
          1.0666666666667,
        ],
        Array [
          1498998600000,
          1.0166666666667,
        ],
        Array [
          1498999200000,
          1,
        ],
        Array [
          1498999800000,
          1.05,
        ],
        Array [
          1499000400000,
          1.0333333333333,
        ],
        Array [
          1499001000000,
          1.8166666666667,
        ],
        Array [
          1499001600000,
          2.0166666666667,
        ],
        Array [
          1499002200000,
          2.0833333333333,
        ],
        Array [
          1499002800000,
          2.2,
        ],
        Array [
          1499003400000,
          2.3,
        ],
        Array [
          1499004000000,
          2.3666666666667,
        ],
        Array [
          1499004600000,
          2.5593220338983,
        ],
        Array [
          1499005200000,
          2.7166666666667,
        ],
        Array [
          1499005800000,
          2.8833333333333,
        ],
        Array [
          1499006400000,
          3,
        ],
        Array [
          1499007000000,
          3.0833333333333,
        ],
        Array [
          1499007600000,
          3.25,
        ],
        Array [
          1499008200000,
          3.3,
        ],
        Array [
          1499008800000,
          3.5333333333333,
        ],
        Array [
          1499009400000,
          3.7166666666667,
        ],
        Array [
          1499010000000,
          3.7333333333333,
        ],
        Array [
          1499010600000,
          3.9833333333333,
        ],
        Array [
          1499011200000,
          4.1666666666667,
        ],
        Array [
          1499011800000,
          2.7166666666667,
        ],
        Array [
          1499012400000,
          1.0333333333333,
        ],
        Array [
          1499013000000,
          1.1,
        ],
        Array [
          1499013600000,
          1.2166666666667,
        ],
        Array [
          1499014200000,
          1.2,
        ],
        Array [
          1499014800000,
          0.98333333333333,
        ],
        Array [
          1499015400000,
          1.25,
        ],
        Array [
          1499016000000,
          1,
        ],
        Array [
          1499016600000,
          1.2666666666667,
        ],
        Array [
          1499017200000,
          1.0833333333333,
        ],
        Array [
          1499017800000,
          1.05,
        ],
        Array [
          1499018400000,
          0.93333333333333,
        ],
        Array [
          1499019000000,
          1.05,
        ],
        Array [
          1499019600000,
          1.5,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Percentage of CPU usage for the Elasticsearch process.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "CPU Utilization",
        "metricAgg": "max",
        "units": "%",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
  ],
}
`;

exports[`getMetrics and getSeries should return metrics with object structure for metric 1`] = `
Object {
  "index_1": Array [
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          2.1666666666667,
        ],
        Array [
          1498968600000,
          2.3166666666667,
        ],
        Array [
          1498969200000,
          2.3666666666667,
        ],
        Array [
          1498969800000,
          2.5,
        ],
        Array [
          1498970400000,
          2.6166666666667,
        ],
        Array [
          1498971000000,
          2.85,
        ],
        Array [
          1498971600000,
          2.8666666666667,
        ],
        Array [
          1498972200000,
          3.0833333333333,
        ],
        Array [
          1498972800000,
          1.6666666666667,
        ],
        Array [
          1498973400000,
          0.11666666666667,
        ],
        Array [
          1498974000000,
          0.13333333333333,
        ],
        Array [
          1498974600000,
          0.43333333333333,
        ],
        Array [
          1498975200000,
          1.15,
        ],
        Array [
          1498975800000,
          1.1333333333333,
        ],
        Array [
          1498976400000,
          1.15,
        ],
        Array [
          1498977000000,
          1.05,
        ],
        Array [
          1498977600000,
          1.1833333333333,
        ],
        Array [
          1498978200000,
          0.91666666666667,
        ],
        Array [
          1498978800000,
          0.95,
        ],
        Array [
          1498979400000,
          1.0166666666667,
        ],
        Array [
          1498980000000,
          1.0333333333333,
        ],
        Array [
          1498980600000,
          1.05,
        ],
        Array [
          1498981200000,
          1.0333333333333,
        ],
        Array [
          1498981800000,
          1.0833333333333,
        ],
        Array [
          1498982400000,
          1,
        ],
        Array [
          1498983000000,
          1.1333333333333,
        ],
        Array [
          1498983600000,
          1.3666666666667,
        ],
        Array [
          1498984200000,
          1.9833333333333,
        ],
        Array [
          1498984800000,
          2,
        ],
        Array [
          1498985400000,
          2.1833333333333,
        ],
        Array [
          1498986000000,
          2.2,
        ],
        Array [
          1498986600000,
          2.3666666666667,
        ],
        Array [
          1498987200000,
          2.4166666666667,
        ],
        Array [
          1498987800000,
          2.55,
        ],
        Array [
          1498988400000,
          2.7,
        ],
        Array [
          1498989000000,
          2.8166666666667,
        ],
        Array [
          1498989600000,
          2.9333333333333,
        ],
        Array [
          1498990200000,
          3.0833333333333,
        ],
        Array [
          1498990800000,
          3.1166666666667,
        ],
        Array [
          1498991400000,
          3.3833333333333,
        ],
        Array [
          1498992000000,
          3.4666666666667,
        ],
        Array [
          1498992600000,
          1.0666666666667,
        ],
        Array [
          1498993200000,
          1,
        ],
        Array [
          1498993800000,
          1.0833333333333,
        ],
        Array [
          1498994400000,
          1.1,
        ],
        Array [
          1498995000000,
          1.05,
        ],
        Array [
          1498995600000,
          1.0333333333333,
        ],
        Array [
          1498996200000,
          1.1166666666667,
        ],
        Array [
          1498996800000,
          1.0333333333333,
        ],
        Array [
          1498997400000,
          1.0833333333333,
        ],
        Array [
          1498998000000,
          1.0666666666667,
        ],
        Array [
          1498998600000,
          1.0166666666667,
        ],
        Array [
          1498999200000,
          1,
        ],
        Array [
          1498999800000,
          1.05,
        ],
        Array [
          1499000400000,
          1.0333333333333,
        ],
        Array [
          1499001000000,
          1.8166666666667,
        ],
        Array [
          1499001600000,
          2.0166666666667,
        ],
        Array [
          1499002200000,
          2.0833333333333,
        ],
        Array [
          1499002800000,
          2.2,
        ],
        Array [
          1499003400000,
          2.3,
        ],
        Array [
          1499004000000,
          2.3666666666667,
        ],
        Array [
          1499004600000,
          2.5593220338983,
        ],
        Array [
          1499005200000,
          2.7166666666667,
        ],
        Array [
          1499005800000,
          2.8833333333333,
        ],
        Array [
          1499006400000,
          3,
        ],
        Array [
          1499007000000,
          3.0833333333333,
        ],
        Array [
          1499007600000,
          3.25,
        ],
        Array [
          1499008200000,
          3.3,
        ],
        Array [
          1499008800000,
          3.5333333333333,
        ],
        Array [
          1499009400000,
          3.7166666666667,
        ],
        Array [
          1499010000000,
          3.7333333333333,
        ],
        Array [
          1499010600000,
          3.9833333333333,
        ],
        Array [
          1499011200000,
          4.1666666666667,
        ],
        Array [
          1499011800000,
          2.7166666666667,
        ],
        Array [
          1499012400000,
          1.0333333333333,
        ],
        Array [
          1499013000000,
          1.1,
        ],
        Array [
          1499013600000,
          1.2166666666667,
        ],
        Array [
          1499014200000,
          1.2,
        ],
        Array [
          1499014800000,
          0.98333333333333,
        ],
        Array [
          1499015400000,
          1.25,
        ],
        Array [
          1499016000000,
          1,
        ],
        Array [
          1499016600000,
          1.2666666666667,
        ],
        Array [
          1499017200000,
          1.0833333333333,
        ],
        Array [
          1499017800000,
          1.05,
        ],
        Array [
          1499018400000,
          0.93333333333333,
        ],
        Array [
          1499019000000,
          1.05,
        ],
        Array [
          1499019600000,
          1.5,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Total heap memory used by Lucene for current index. This is the sum of other fields for primary and replica shards.",
        "field": "index_stats.total.segments.memory_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Lucene Total",
        "metricAgg": "max",
        "title": "Index Memory - Lucene 1",
        "units": "B",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          2.1666666666667,
        ],
        Array [
          1498968600000,
          2.3166666666667,
        ],
        Array [
          1498969200000,
          2.3666666666667,
        ],
        Array [
          1498969800000,
          2.5,
        ],
        Array [
          1498970400000,
          2.6166666666667,
        ],
        Array [
          1498971000000,
          2.85,
        ],
        Array [
          1498971600000,
          2.8666666666667,
        ],
        Array [
          1498972200000,
          3.0833333333333,
        ],
        Array [
          1498972800000,
          1.6666666666667,
        ],
        Array [
          1498973400000,
          0.11666666666667,
        ],
        Array [
          1498974000000,
          0.13333333333333,
        ],
        Array [
          1498974600000,
          0.43333333333333,
        ],
        Array [
          1498975200000,
          1.15,
        ],
        Array [
          1498975800000,
          1.1333333333333,
        ],
        Array [
          1498976400000,
          1.15,
        ],
        Array [
          1498977000000,
          1.05,
        ],
        Array [
          1498977600000,
          1.1833333333333,
        ],
        Array [
          1498978200000,
          0.91666666666667,
        ],
        Array [
          1498978800000,
          0.95,
        ],
        Array [
          1498979400000,
          1.0166666666667,
        ],
        Array [
          1498980000000,
          1.0333333333333,
        ],
        Array [
          1498980600000,
          1.05,
        ],
        Array [
          1498981200000,
          1.0333333333333,
        ],
        Array [
          1498981800000,
          1.0833333333333,
        ],
        Array [
          1498982400000,
          1,
        ],
        Array [
          1498983000000,
          1.1333333333333,
        ],
        Array [
          1498983600000,
          1.3666666666667,
        ],
        Array [
          1498984200000,
          1.9833333333333,
        ],
        Array [
          1498984800000,
          2,
        ],
        Array [
          1498985400000,
          2.1833333333333,
        ],
        Array [
          1498986000000,
          2.2,
        ],
        Array [
          1498986600000,
          2.3666666666667,
        ],
        Array [
          1498987200000,
          2.4166666666667,
        ],
        Array [
          1498987800000,
          2.55,
        ],
        Array [
          1498988400000,
          2.7,
        ],
        Array [
          1498989000000,
          2.8166666666667,
        ],
        Array [
          1498989600000,
          2.9333333333333,
        ],
        Array [
          1498990200000,
          3.0833333333333,
        ],
        Array [
          1498990800000,
          3.1166666666667,
        ],
        Array [
          1498991400000,
          3.3833333333333,
        ],
        Array [
          1498992000000,
          3.4666666666667,
        ],
        Array [
          1498992600000,
          1.0666666666667,
        ],
        Array [
          1498993200000,
          1,
        ],
        Array [
          1498993800000,
          1.0833333333333,
        ],
        Array [
          1498994400000,
          1.1,
        ],
        Array [
          1498995000000,
          1.05,
        ],
        Array [
          1498995600000,
          1.0333333333333,
        ],
        Array [
          1498996200000,
          1.1166666666667,
        ],
        Array [
          1498996800000,
          1.0333333333333,
        ],
        Array [
          1498997400000,
          1.0833333333333,
        ],
        Array [
          1498998000000,
          1.0666666666667,
        ],
        Array [
          1498998600000,
          1.0166666666667,
        ],
        Array [
          1498999200000,
          1,
        ],
        Array [
          1498999800000,
          1.05,
        ],
        Array [
          1499000400000,
          1.0333333333333,
        ],
        Array [
          1499001000000,
          1.8166666666667,
        ],
        Array [
          1499001600000,
          2.0166666666667,
        ],
        Array [
          1499002200000,
          2.0833333333333,
        ],
        Array [
          1499002800000,
          2.2,
        ],
        Array [
          1499003400000,
          2.3,
        ],
        Array [
          1499004000000,
          2.3666666666667,
        ],
        Array [
          1499004600000,
          2.5593220338983,
        ],
        Array [
          1499005200000,
          2.7166666666667,
        ],
        Array [
          1499005800000,
          2.8833333333333,
        ],
        Array [
          1499006400000,
          3,
        ],
        Array [
          1499007000000,
          3.0833333333333,
        ],
        Array [
          1499007600000,
          3.25,
        ],
        Array [
          1499008200000,
          3.3,
        ],
        Array [
          1499008800000,
          3.5333333333333,
        ],
        Array [
          1499009400000,
          3.7166666666667,
        ],
        Array [
          1499010000000,
          3.7333333333333,
        ],
        Array [
          1499010600000,
          3.9833333333333,
        ],
        Array [
          1499011200000,
          4.1666666666667,
        ],
        Array [
          1499011800000,
          2.7166666666667,
        ],
        Array [
          1499012400000,
          1.0333333333333,
        ],
        Array [
          1499013000000,
          1.1,
        ],
        Array [
          1499013600000,
          1.2166666666667,
        ],
        Array [
          1499014200000,
          1.2,
        ],
        Array [
          1499014800000,
          0.98333333333333,
        ],
        Array [
          1499015400000,
          1.25,
        ],
        Array [
          1499016000000,
          1,
        ],
        Array [
          1499016600000,
          1.2666666666667,
        ],
        Array [
          1499017200000,
          1.0833333333333,
        ],
        Array [
          1499017800000,
          1.05,
        ],
        Array [
          1499018400000,
          0.93333333333333,
        ],
        Array [
          1499019000000,
          1.05,
        ],
        Array [
          1499019600000,
          1.5,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Heap memory used by Stored Fields (e.g., _source). This is a part of Lucene Total.",
        "field": "index_stats.total.segments.stored_fields_memory_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Stored Fields",
        "metricAgg": "max",
        "title": "Index Memory",
        "units": "B",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          2.1666666666667,
        ],
        Array [
          1498968600000,
          2.3166666666667,
        ],
        Array [
          1498969200000,
          2.3666666666667,
        ],
        Array [
          1498969800000,
          2.5,
        ],
        Array [
          1498970400000,
          2.6166666666667,
        ],
        Array [
          1498971000000,
          2.85,
        ],
        Array [
          1498971600000,
          2.8666666666667,
        ],
        Array [
          1498972200000,
          3.0833333333333,
        ],
        Array [
          1498972800000,
          1.6666666666667,
        ],
        Array [
          1498973400000,
          0.11666666666667,
        ],
        Array [
          1498974000000,
          0.13333333333333,
        ],
        Array [
          1498974600000,
          0.43333333333333,
        ],
        Array [
          1498975200000,
          1.15,
        ],
        Array [
          1498975800000,
          1.1333333333333,
        ],
        Array [
          1498976400000,
          1.15,
        ],
        Array [
          1498977000000,
          1.05,
        ],
        Array [
          1498977600000,
          1.1833333333333,
        ],
        Array [
          1498978200000,
          0.91666666666667,
        ],
        Array [
          1498978800000,
          0.95,
        ],
        Array [
          1498979400000,
          1.0166666666667,
        ],
        Array [
          1498980000000,
          1.0333333333333,
        ],
        Array [
          1498980600000,
          1.05,
        ],
        Array [
          1498981200000,
          1.0333333333333,
        ],
        Array [
          1498981800000,
          1.0833333333333,
        ],
        Array [
          1498982400000,
          1,
        ],
        Array [
          1498983000000,
          1.1333333333333,
        ],
        Array [
          1498983600000,
          1.3666666666667,
        ],
        Array [
          1498984200000,
          1.9833333333333,
        ],
        Array [
          1498984800000,
          2,
        ],
        Array [
          1498985400000,
          2.1833333333333,
        ],
        Array [
          1498986000000,
          2.2,
        ],
        Array [
          1498986600000,
          2.3666666666667,
        ],
        Array [
          1498987200000,
          2.4166666666667,
        ],
        Array [
          1498987800000,
          2.55,
        ],
        Array [
          1498988400000,
          2.7,
        ],
        Array [
          1498989000000,
          2.8166666666667,
        ],
        Array [
          1498989600000,
          2.9333333333333,
        ],
        Array [
          1498990200000,
          3.0833333333333,
        ],
        Array [
          1498990800000,
          3.1166666666667,
        ],
        Array [
          1498991400000,
          3.3833333333333,
        ],
        Array [
          1498992000000,
          3.4666666666667,
        ],
        Array [
          1498992600000,
          1.0666666666667,
        ],
        Array [
          1498993200000,
          1,
        ],
        Array [
          1498993800000,
          1.0833333333333,
        ],
        Array [
          1498994400000,
          1.1,
        ],
        Array [
          1498995000000,
          1.05,
        ],
        Array [
          1498995600000,
          1.0333333333333,
        ],
        Array [
          1498996200000,
          1.1166666666667,
        ],
        Array [
          1498996800000,
          1.0333333333333,
        ],
        Array [
          1498997400000,
          1.0833333333333,
        ],
        Array [
          1498998000000,
          1.0666666666667,
        ],
        Array [
          1498998600000,
          1.0166666666667,
        ],
        Array [
          1498999200000,
          1,
        ],
        Array [
          1498999800000,
          1.05,
        ],
        Array [
          1499000400000,
          1.0333333333333,
        ],
        Array [
          1499001000000,
          1.8166666666667,
        ],
        Array [
          1499001600000,
          2.0166666666667,
        ],
        Array [
          1499002200000,
          2.0833333333333,
        ],
        Array [
          1499002800000,
          2.2,
        ],
        Array [
          1499003400000,
          2.3,
        ],
        Array [
          1499004000000,
          2.3666666666667,
        ],
        Array [
          1499004600000,
          2.5593220338983,
        ],
        Array [
          1499005200000,
          2.7166666666667,
        ],
        Array [
          1499005800000,
          2.8833333333333,
        ],
        Array [
          1499006400000,
          3,
        ],
        Array [
          1499007000000,
          3.0833333333333,
        ],
        Array [
          1499007600000,
          3.25,
        ],
        Array [
          1499008200000,
          3.3,
        ],
        Array [
          1499008800000,
          3.5333333333333,
        ],
        Array [
          1499009400000,
          3.7166666666667,
        ],
        Array [
          1499010000000,
          3.7333333333333,
        ],
        Array [
          1499010600000,
          3.9833333333333,
        ],
        Array [
          1499011200000,
          4.1666666666667,
        ],
        Array [
          1499011800000,
          2.7166666666667,
        ],
        Array [
          1499012400000,
          1.0333333333333,
        ],
        Array [
          1499013000000,
          1.1,
        ],
        Array [
          1499013600000,
          1.2166666666667,
        ],
        Array [
          1499014200000,
          1.2,
        ],
        Array [
          1499014800000,
          0.98333333333333,
        ],
        Array [
          1499015400000,
          1.25,
        ],
        Array [
          1499016000000,
          1,
        ],
        Array [
          1499016600000,
          1.2666666666667,
        ],
        Array [
          1499017200000,
          1.0833333333333,
        ],
        Array [
          1499017800000,
          1.05,
        ],
        Array [
          1499018400000,
          0.93333333333333,
        ],
        Array [
          1499019000000,
          1.05,
        ],
        Array [
          1499019600000,
          1.5,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Heap memory used by Doc Values. This is a part of Lucene Total.",
        "field": "index_stats.total.segments.doc_values_memory_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Doc Values",
        "metricAgg": "max",
        "title": "Index Memory",
        "units": "B",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
    Object {
      "bucket_size": "10 mins",
      "data": Array [
        Array [
          1498968000000,
          2.1666666666667,
        ],
        Array [
          1498968600000,
          2.3166666666667,
        ],
        Array [
          1498969200000,
          2.3666666666667,
        ],
        Array [
          1498969800000,
          2.5,
        ],
        Array [
          1498970400000,
          2.6166666666667,
        ],
        Array [
          1498971000000,
          2.85,
        ],
        Array [
          1498971600000,
          2.8666666666667,
        ],
        Array [
          1498972200000,
          3.0833333333333,
        ],
        Array [
          1498972800000,
          1.6666666666667,
        ],
        Array [
          1498973400000,
          0.11666666666667,
        ],
        Array [
          1498974000000,
          0.13333333333333,
        ],
        Array [
          1498974600000,
          0.43333333333333,
        ],
        Array [
          1498975200000,
          1.15,
        ],
        Array [
          1498975800000,
          1.1333333333333,
        ],
        Array [
          1498976400000,
          1.15,
        ],
        Array [
          1498977000000,
          1.05,
        ],
        Array [
          1498977600000,
          1.1833333333333,
        ],
        Array [
          1498978200000,
          0.91666666666667,
        ],
        Array [
          1498978800000,
          0.95,
        ],
        Array [
          1498979400000,
          1.0166666666667,
        ],
        Array [
          1498980000000,
          1.0333333333333,
        ],
        Array [
          1498980600000,
          1.05,
        ],
        Array [
          1498981200000,
          1.0333333333333,
        ],
        Array [
          1498981800000,
          1.0833333333333,
        ],
        Array [
          1498982400000,
          1,
        ],
        Array [
          1498983000000,
          1.1333333333333,
        ],
        Array [
          1498983600000,
          1.3666666666667,
        ],
        Array [
          1498984200000,
          1.9833333333333,
        ],
        Array [
          1498984800000,
          2,
        ],
        Array [
          1498985400000,
          2.1833333333333,
        ],
        Array [
          1498986000000,
          2.2,
        ],
        Array [
          1498986600000,
          2.3666666666667,
        ],
        Array [
          1498987200000,
          2.4166666666667,
        ],
        Array [
          1498987800000,
          2.55,
        ],
        Array [
          1498988400000,
          2.7,
        ],
        Array [
          1498989000000,
          2.8166666666667,
        ],
        Array [
          1498989600000,
          2.9333333333333,
        ],
        Array [
          1498990200000,
          3.0833333333333,
        ],
        Array [
          1498990800000,
          3.1166666666667,
        ],
        Array [
          1498991400000,
          3.3833333333333,
        ],
        Array [
          1498992000000,
          3.4666666666667,
        ],
        Array [
          1498992600000,
          1.0666666666667,
        ],
        Array [
          1498993200000,
          1,
        ],
        Array [
          1498993800000,
          1.0833333333333,
        ],
        Array [
          1498994400000,
          1.1,
        ],
        Array [
          1498995000000,
          1.05,
        ],
        Array [
          1498995600000,
          1.0333333333333,
        ],
        Array [
          1498996200000,
          1.1166666666667,
        ],
        Array [
          1498996800000,
          1.0333333333333,
        ],
        Array [
          1498997400000,
          1.0833333333333,
        ],
        Array [
          1498998000000,
          1.0666666666667,
        ],
        Array [
          1498998600000,
          1.0166666666667,
        ],
        Array [
          1498999200000,
          1,
        ],
        Array [
          1498999800000,
          1.05,
        ],
        Array [
          1499000400000,
          1.0333333333333,
        ],
        Array [
          1499001000000,
          1.8166666666667,
        ],
        Array [
          1499001600000,
          2.0166666666667,
        ],
        Array [
          1499002200000,
          2.0833333333333,
        ],
        Array [
          1499002800000,
          2.2,
        ],
        Array [
          1499003400000,
          2.3,
        ],
        Array [
          1499004000000,
          2.3666666666667,
        ],
        Array [
          1499004600000,
          2.5593220338983,
        ],
        Array [
          1499005200000,
          2.7166666666667,
        ],
        Array [
          1499005800000,
          2.8833333333333,
        ],
        Array [
          1499006400000,
          3,
        ],
        Array [
          1499007000000,
          3.0833333333333,
        ],
        Array [
          1499007600000,
          3.25,
        ],
        Array [
          1499008200000,
          3.3,
        ],
        Array [
          1499008800000,
          3.5333333333333,
        ],
        Array [
          1499009400000,
          3.7166666666667,
        ],
        Array [
          1499010000000,
          3.7333333333333,
        ],
        Array [
          1499010600000,
          3.9833333333333,
        ],
        Array [
          1499011200000,
          4.1666666666667,
        ],
        Array [
          1499011800000,
          2.7166666666667,
        ],
        Array [
          1499012400000,
          1.0333333333333,
        ],
        Array [
          1499013000000,
          1.1,
        ],
        Array [
          1499013600000,
          1.2166666666667,
        ],
        Array [
          1499014200000,
          1.2,
        ],
        Array [
          1499014800000,
          0.98333333333333,
        ],
        Array [
          1499015400000,
          1.25,
        ],
        Array [
          1499016000000,
          1,
        ],
        Array [
          1499016600000,
          1.2666666666667,
        ],
        Array [
          1499017200000,
          1.0833333333333,
        ],
        Array [
          1499017800000,
          1.05,
        ],
        Array [
          1499018400000,
          0.93333333333333,
        ],
        Array [
          1499019000000,
          1.05,
        ],
        Array [
          1499019600000,
          1.5,
        ],
      ],
      "metric": Object {
        "app": "elasticsearch",
        "description": "Heap memory used by Norms (normalization factors for query-time, text scoring). This is a part of Lucene Total.",
        "field": "index_stats.total.segments.norms_memory_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Norms",
        "metricAgg": "max",
        "title": "Index Memory",
        "units": "B",
      },
      "timeRange": Object {
        "max": 1499054399999,
        "min": 1498968000000,
      },
    },
  ],
}
`;
